--- a/cityharvest/assets/css/index.css
+++ b/cityharvest/assets/css/index.css
@@ -20,7 +20,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    /* background: rgba(0, 0, 0, 0.6); */
+    background: var(--primary-color);
+    mix-blend-mode: multiply;
 }
 
 #hero video {
