--- a/cityharvest/assets/css/main.css
+++ b/cityharvest/assets/css/main.css
@@ -51,8 +51,12 @@ html {
     justify-content: space-between;
     /* border-top: 2px solid hsl(0, 0%, 100%, .8);
     border-left: 2px solid hsl(0, 0%, 100%, .8); */
-    background: hsl(0, 0%, 100%, .3);
+    /* background: hsl(0, 0%, 100%, .3); */
+    /* background: hsl(0, 0%, 100%, .8);
+    backdrop-filter: blur(10px); */
+    background: var(--white-color);
     backdrop-filter: blur(10px);
+    transition: background .2s;
 }
 
 .navbar .nav-brand {
